--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,14 @@
   "author": "Oumar MAURET",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.19.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^3.6.17",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.13",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
