--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.19.1",
+    "connect-mongo": "^3.0.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.13",
+    "mongoose-sanitizer-plugin": "^1.1.0",
     "mongoose-unique-validator": "^3.0.0",
+    "mongoose-validator": "^2.1.0",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "nocache": "^3.0.1",
+    "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1"
   }
 }
