--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ ENCRYPT_KEY = $2y$10$x.kQqqHn.5EUyDu9GZGfSufP.9BNzMNkX1AjnJbNLQP7klDkmEZtC
 //Connexion URI à la base des données MongoDB
 DB_MONGODB = mongodb://baroumauret:PokemonMali@sopeckoko-shard-00-00.sm2ev.mongodb.net:27017,sopeckoko-shard-00-01.sm2ev.mongodb.net:27017,sopeckoko-shard-00-02.sm2ev.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-6fpozz-shard-0&authSource=admin&retryWrites=true&w=majority
 //Clé Session Secret
-SESSION_SECRET = $2y$10$z3Hsd1.OvR
+SESSION_SECRET = dfgsfd4g564fg456d4gsgsdfg4
