--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose-sanitizer-plugin": "^1.1.0",
     "mongoose-unique-validator": "^3.0.0",
     "mongoose-validator": "^2.1.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nocache": "^3.0.1",
     "nodemon": "^2.0.15",
