Refactoring code and add clean features

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,5 @@
 //Signature du Token pour valider l'authentification des utilisateurs
-TOKEN_KEY = $2y$10$fXuYH35cwUk3MZX5B4bcQ.JqAfI3chV50QOL0XB6xhDDvE6T45X3y
-//Signature pour encrypter le mail des utilisateurs
-ENCRYPT_KEY = $2y$10$x.kQqqHn.5EUyDu9GZGfSufP.9BNzMNkX1AjnJbNLQP7klDkmEZtC
+TOKEN_SECRET = $2y$10$fXuYH35cwUk3MZX5B4bcQ.JqAfI3chV50QOL0XB6xhDDvE6T45X3y
+
 //Connexion URI à la base des données MongoDB
 DB_MONGODB = mongodb://baroumauret:PokemonMali@sopeckoko-shard-00-00.sm2ev.mongodb.net:27017,sopeckoko-shard-00-01.sm2ev.mongodb.net:27017,sopeckoko-shard-00-02.sm2ev.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-6fpozz-shard-0&authSource=admin&retryWrites=true&w=majority
-//Clé Session Secret
-SESSION_SECRET = dfgsfd4g564fg456d4gsgsdfg4
